--- a/public/feAdmin/css/styles.css
+++ b/public/feAdmin/css/styles.css
@@ -529,13 +529,19 @@ a.bg-danger:hover {
 	display: block;
 	background-color: #fff;
 	padding: 0;
-	display: none;
+	
 }
 
 .sidebar form {
 	padding: 20px 15px 5px 15px;
 	border-bottom: 1px solid #eee;
 	margin-bottom: 20px;
+}
+#toggle{
+	padding: 6px;
+	font-size: 20px;
+	cursor: pointer;
+	display: none;
 }
 
 @media (min-width: 768px) {
@@ -554,10 +560,18 @@ a.bg-danger:hover {
 		background-color: #fff;
 		box-shadow: 1px 0px 10px rgba(0, 0, 0, .05);
 	}
+	/* #toggle{
+		
+		display: block;
+	} 
+	 */
+}
+	
+	
 	.navbar-header {
 		width: 100%;
-	}
-}
+	
+		}
 
 .sidebar ul.nav a:hover, 
 .sidebar ul.nav li.parent ul li a:hover {
@@ -570,7 +584,7 @@ a.bg-danger:hover {
 .sidebar ul.nav .active > a:focus, .sidebar ul.nav li.parent a.active:focus {
 	color: #fff;
 	background-color: #30a5ff;
-}*/
+}
 
 .sidebar ul.nav ul,
 .sidebar ul.nav ul li {
@@ -932,3 +946,20 @@ h1.page-header {
 #avatar{
     cursor: pointer;
 }
+
+
+
+/* @media screen and (max-width: 768px){
+
+	.sidebar {
+		display: block;
+  	
+	}
+	
+	#toggle{
+		display: block;
+	}
+	nav{
+		display: none;
+	}
+} */
